Fix contact section padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,7 +670,7 @@ footer > ul > li {
 
 #contact > .content {
     max-width: 36rem;
-    padding: 8rem 0 4rem;
+    padding: 8rem 1rem 4rem;
     margin: 0 auto;
     text-align: center;
 }
